# franka-pick-and-place

./: .gitignore  README.md  generate_aruco.py
aruco/: camera_params.yaml  detect_aruco.py  generate_aruco.py
cv-acquire/: webcamAcquisition.py  webcam_acquisition.py
cv-transform/: warp_plane.py
log/: latest_build  latest_list
src/franka_pick_place/: CMakeLists.txt  package.xml
src/franka_pick_place/scripts/: pick_place_node.py  user_interface.py  vision_bridge_node.py  world_node.py
